--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,9 +28,11 @@
                 android:id="@+id/userpic"
                 android:layout_width="48dp"
                 android:layout_height="0dp"
-                android:layout_margin="@dimen/margin_default_10dp"
-                android:src="?attr/dividerColor"
+                android:layout_marginHorizontal="@dimen/margin_default_10dp"
+                android:stateListAnimator="@animator/scale_down_animator"
+                tools:src="@drawable/surprised_avatar"
                 android:visibility="gone"
+                tools:visibility="visible"
                 app:civ_border_color="?android:textColorPrimary"
                 app:civ_border_width="@dimen/default_stroke"
                 app:civ_circle_background_color="?android:textColorHint"
@@ -42,6 +44,7 @@
                 android:id="@+id/motiv_icon"
                 android:layout_width="48dp"
                 android:layout_height="0dp"
+                android:foreground="?attr/selectableItemBackground"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_saturn_and_other_planets_primary"
                 app:layout_constraintBottom_toBottomOf="parent"
