--- a/manager/src/main/res/layout/activity_add_icons.xml
+++ b/manager/src/main/res/layout/activity_add_icons.xml
@@ -36,7 +36,7 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
         tools:itemCount="6"
-        tools:listitem="@layout/pics_layout" />
+        tools:listitem="@layout/cover_layout" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loading"
