--- a/app/src/main/res/drawable/ic_baseline_arrow_back_ios_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_arrow_back_ios_24.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="?android:textColorPrimary"
         android:pathData="M11.67,3.87L9.9,2.1 0,12l9.9,9.9 1.77,-1.77L3.54,12z" />
 </vector>
