--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -29,10 +29,10 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/name"
             style="@style/TextAppearance.MaterialComponents.Headline4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{reference.name}"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -44,7 +44,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@{reference.description}"
             android:textAlignment="center"
             android:textColor="@color/white"
             tools:text="@string/dribble_description" />
