--- a/base/src/main/res/layout/cover_layout.xml
+++ b/base/src/main/res/layout/cover_layout.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     style="@style/MotivCard"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="@dimen/margin_small_4dp">
+    android:layout_height="250dp"
+    app:cardCornerRadius="0dp"
+    app:strokeColor="?android:colorBackground">
 
     <ImageView
         android:id="@+id/image"
