--- a/manager/src/main/res/layout/fragment_icons.xml
+++ b/manager/src/main/res/layout/fragment_icons.xml
@@ -9,4 +9,4 @@
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
     app:spanCount="2"
     tools:itemCount="10"
-    tools:listitem="@layout/pics_layout" />
+    tools:listitem="@layout/cover_layout" />
