--- a/manager/src/main/res/navigation/manager_navigation.xml
+++ b/manager/src/main/res/navigation/manager_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.ilustris.motiv.manager.ui.home.HomeFragment"
+        android:name="com.ilustris.motiv.manager.ui.home.ManagerHomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_manager_home" />
 
