--- a/manager/src/main/res/layout/activity_manager.xml
+++ b/manager/src/main/res/layout/activity_manager.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:openDrawer="start">
 
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_height="match_parent"
-        android:layout_above="@id/nav_view"
-        android:layout_width="match_parent"
-        android:layout_below="@id/motiv_top"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/manager_navigation" />
+    <include
+        android:id="@+id/main_content"
+        layout="@layout/main_content" />
 
 
     <com.google.android.material.navigation.NavigationView
@@ -26,7 +19,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/manager_nav_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
