--- a/manager/src/main/res/layout/main_content.xml
+++ b/manager/src/main/res/layout/main_content.xml
@@ -4,15 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/manager_navigation"
+    <fragment
+        android:id="@+id/manager_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/nav_view"
-        android:layout_below="@id/motiv_top" />
+        android:layout_below="@id/motiv_top"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/manager_navigation" />
 
     <include layout="@layout/blur_layout" />
 
