--- a/manager/src/main/res/layout/motiv_manager_toolbar.xml
+++ b/manager/src/main/res/layout/motiv_manager_toolbar.xml
@@ -6,6 +6,7 @@
     android:id="@+id/toolbarContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="?attr/dividerColor"
     android:background="@drawable/bottom_line">
 
     <androidx.appcompat.widget.Toolbar
@@ -21,17 +22,17 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
 
-        <TextView
-            android:id="@+id/motivTitle"
+        <com.airbnb.lottie.LottieAnimationView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:lottie_autoPlay="true"
+            app:lottie_colorFilter="@color/colorPrimaryDark"
+            app:lottie_loop="true"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/jost"
-            android:gravity="center"
-            android:maxLength="50"
-            android:maxLines="1"
-            android:text="@string/app_name"
-            android:textAppearance="@style/ToolbarTitle" />
+            app:lottie_rawRes="@raw/planet_manager"
+            app:lottie_repeatMode="reverse"
+            tools:src="@drawable/ic_saturn_and_other_planets_primary" />
+
     </RelativeLayout>
 
 </RelativeLayout>
