quote recycler moved to base module

--- a/manager/src/main/res/layout/fragment_manager_home.xml
+++ b/manager/src/main/res/layout/fragment_manager_home.xml
@@ -3,7 +3,7 @@
 <androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
     android:id="@+id/quotesrecyclerview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" />
+    android:padding="@dimen/padding_default_16dp" />
